# TRZ_data_analyzer

./: .dockerignore  .gitignore  Dockerfile  README.md  app_version.py  bump_version.py  config_loader.py  data_loader.py  entrypoint.sh  limits_config.json  load_worker.py  metadata_config.json  pyproject.toml  requirements.txt  tests_config.json
.githooks/: pre-push
app/: __init__.py  constants.py  core_services.py  db_search.py  provisioning_error_codes.py  utils.py
data/: provisioning_error_codes.json
hybrid_app/: __init__.py  auth.py  db.py  main.py  schemas.py  settings.py
hybrid_app/routes/: api.py  page_contracts.py  pages.py
hybrid_app/routes/page_handlers/: dashboard_auth.py
hybrid_app/services/: analyzer_service.py  artifact_store.py  detail_analysis.py  extra_charts.py  multi_run_analysis.py  mysql_sql_preview.py  pending_db_password.py  selection_facets.py  session_store.py  sn_metadata.py  upload_archive.py
hybrid_app/static/: app-pages.js  app-shell.js  chart-fullscreen.js  styles.css
hybrid_app/templates/: base.html  dashboard.html  index.html  login.html  multi_run_analysis.html  mysql_sql.html  run_analysis.html  run_detail.html
hybrid_app/templates/macros/: ui.html
hybrid_app/templates/partials/: dashboard_kpis.html  failure_sn_list.html  kpi_sn_list.html  multi_failure_sn_list.html  multi_kpi_sn_list.html  multi_run_detail_results.html  multi_sn_results.html  run_detail_results.html  run_extra_charts.html  runs_table.html  sn_metadata_results.html
